--- a/app/src/main/res/layout/row_sched.xml
+++ b/app/src/main/res/layout/row_sched.xml
@@ -8,51 +8,55 @@
 
     <TextView
         android:id="@+id/tv_wednesday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="W"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_tuesday"
-        app:layout_constraintTop_toTopOf="@+id/tv_tuesday" />
+        app:layout_constraintTop_toTopOf="@+id/tv_tuesday"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_thursday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="T"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_wednesday"
-        app:layout_constraintTop_toTopOf="@+id/tv_wednesday" />
+        app:layout_constraintTop_toTopOf="@+id/tv_wednesday"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_friday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="F"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_thursday"
-        app:layout_constraintTop_toTopOf="@+id/tv_thursday" />
+        app:layout_constraintTop_toTopOf="@+id/tv_thursday"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_tuesday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="T"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_monday"
-        app:layout_constraintTop_toTopOf="@+id/tv_monday" />
+        app:layout_constraintTop_toTopOf="@+id/tv_monday"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_sched_name"
@@ -61,45 +65,48 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical|center_horizontal"
-        android:textSize="12sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_monday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="M"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_sched_repeat"
-        app:layout_constraintStart_toEndOf="@+id/tv_sched_repeat" />
+        app:layout_constraintStart_toEndOf="@+id/tv_sched_repeat"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_saturday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="S"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_friday"
-        app:layout_constraintTop_toTopOf="@+id/tv_friday" />
+        app:layout_constraintTop_toTopOf="@+id/tv_friday"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_sunday"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|center_horizontal"
         android:text="S"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_saturday"
-        app:layout_constraintTop_toTopOf="@+id/tv_saturday" />
+        app:layout_constraintTop_toTopOf="@+id/tv_saturday"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_sched_repeat"
@@ -107,8 +114,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Repeat:"
-        android:textSize="12sp"
+        android:text="@string/repeat"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_sched_name" />
 
@@ -119,20 +126,20 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@android:color/transparent"
-        android:contentDescription="delete"
+        android:contentDescription="@string/delete"
         android:onClick="sched_clickHandler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/delete_row" />
+        app:srcCompat="@drawable/baseline_delete_forever_black_36" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_start_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Start Time:"
-        android:textSize="12sp"
+        android:text="@string/start_time"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_sched_repeat" />
 
@@ -141,9 +148,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textSize="12sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3" />
+        android:textSize="14sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_start_time"
+        app:layout_constraintStart_toEndOf="@+id/tv_start_time" />
 
     <ImageButton
         android:id="@+id/bt_edit_sched"
@@ -152,9 +159,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
-        android:contentDescription="edit scheduler"
+        android:contentDescription="@string/edit_scheduler"
         android:onClick="sched_clickHandler"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_start_time"
         app:layout_constraintEnd_toEndOf="@+id/tv_sunday"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
