--- a/app/src/main/res/layout/tab4.xml
+++ b/app/src/main/res/layout/tab4.xml
@@ -13,7 +13,7 @@
         android:layout_height="17dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Selected Log:"
+        android:text="@string/selected_log"
         app:layout_constraintEnd_toStartOf="@+id/sp_selected_logfile"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
