Creating Workaround for ExtSD with root permissions

--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -24,6 +24,10 @@
         android:dependency="notifications"
         android:key="vibrate"
         android:title="@string/pref_title_vibrate" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="root_access"
+        android:title="Root Access" />
 
 
 </PreferenceScreen>
